3.1.1/_sources/gallery/pyplots/boxplot_demo_pyplot.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_boxplot_demo_pyplot.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_boxplot_demo_pyplot.py:


============
Boxplot Demo
============

Example boxplot code


.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)

    # fake up some data
    spread = np.random.rand(50) * 100
    center = np.ones(25) * 50
    flier_high = np.random.rand(10) * 100 + 100
    flier_low = np.random.rand(10) * -100
    data = np.concatenate((spread, center, flier_high, flier_low))









.. code-block:: default


    fig1, ax1 = plt.subplots()
    ax1.set_title('Basic Plot')
    ax1.boxplot(data)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3b98e650>, <matplotlib.lines.Line2D object at 0x7ffb3e117450>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3e1177d0>, <matplotlib.lines.Line2D object at 0x7ffb3e09e910>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3df9f510>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3e09ef10>], 'fliers': [<matplotlib.lines.Line2D object at 0x7ffb3bca88d0>], 'means': []}




.. code-block:: default


    fig2, ax2 = plt.subplots()
    ax2.set_title('Notched boxes')
    ax2.boxplot(data, notch=True)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_002.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3c1b4650>, <matplotlib.lines.Line2D object at 0x7ffb3e2161d0>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3e216d10>, <matplotlib.lines.Line2D object at 0x7ffb3e111490>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3c0f5c90>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3e1119d0>], 'fliers': [<matplotlib.lines.Line2D object at 0x7ffb3e111e90>], 'means': []}




.. code-block:: default


    green_diamond = dict(markerfacecolor='g', marker='D')
    fig3, ax3 = plt.subplots()
    ax3.set_title('Changed Outlier Symbols')
    ax3.boxplot(data, flierprops=green_diamond)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_003.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3df72e10>, <matplotlib.lines.Line2D object at 0x7ffb3df863d0>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3df868d0>, <matplotlib.lines.Line2D object at 0x7ffb3df86dd0>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3df72210>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3df8b310>], 'fliers': [<matplotlib.lines.Line2D object at 0x7ffb3df8b810>], 'means': []}




.. code-block:: default


    fig4, ax4 = plt.subplots()
    ax4.set_title('Hide Outlier Points')
    ax4.boxplot(data, showfliers=False)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_004.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3e0c22d0>, <matplotlib.lines.Line2D object at 0x7ffb3e0c2850>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3e0c2d50>, <matplotlib.lines.Line2D object at 0x7ffb3e0b1290>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3e0cc690>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3e0b17d0>], 'fliers': [], 'means': []}




.. code-block:: default


    red_square = dict(markerfacecolor='r', marker='s')
    fig5, ax5 = plt.subplots()
    ax5.set_title('Horizontal Boxes')
    ax5.boxplot(data, vert=False, flierprops=red_square)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_005.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3dfe9710>, <matplotlib.lines.Line2D object at 0x7ffb3dfe9c90>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3dff51d0>, <matplotlib.lines.Line2D object at 0x7ffb3dff56d0>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3e00cad0>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3dff5bd0>], 'fliers': [<matplotlib.lines.Line2D object at 0x7ffb3dffc110>], 'means': []}




.. code-block:: default


    fig6, ax6 = plt.subplots()
    ax6.set_title('Shorter Whisker Length')
    ax6.boxplot(data, flierprops=red_square, vert=False, whis=0.75)




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_006.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'whiskers': [<matplotlib.lines.Line2D object at 0x7ffb3e066bd0>, <matplotlib.lines.Line2D object at 0x7ffb3e06e190>], 'caps': [<matplotlib.lines.Line2D object at 0x7ffb3e06e690>, <matplotlib.lines.Line2D object at 0x7ffb3e06eb90>], 'boxes': [<matplotlib.lines.Line2D object at 0x7ffb3e028f90>], 'medians': [<matplotlib.lines.Line2D object at 0x7ffb3e087110>], 'fliers': [<matplotlib.lines.Line2D object at 0x7ffb3e0875d0>], 'means': []}



Fake up some more data


.. code-block:: default


    spread = np.random.rand(50) * 100
    center = np.ones(25) * 40
    flier_high = np.random.rand(10) * 100 + 100
    flier_low = np.random.rand(10) * -100
    d2 = np.concatenate((spread, center, flier_high, flier_low))
    data.shape = (-1, 1)
    d2.shape = (-1, 1)








Making a 2-D array only works if all the columns are the
same length.  If they are not, then use a list instead.
This is actually more efficient because boxplot converts
a 2-D array into a list of vectors internally anyway.


.. code-block:: default


    data = [data, d2, d2[::2,0]]
    fig7, ax7 = plt.subplots()
    ax7.set_title('Multiple Samples with Different sizes')
    ax7.boxplot(data)

    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_boxplot_demo_pyplot_007.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.boxplot
    matplotlib.pyplot.boxplot




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function boxplot at 0x7ffb5806f680>




.. _sphx_glr_download_gallery_pyplots_boxplot_demo_pyplot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: boxplot_demo_pyplot.py <boxplot_demo_pyplot.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: boxplot_demo_pyplot.ipynb <boxplot_demo_pyplot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
